--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/btn_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="Start"
         android:textColor="@color/black" />
 
